Fix long message overflowing

--- a/client/src/components/ChatMessages/ChatMessages.css
+++ b/client/src/components/ChatMessages/ChatMessages.css
@@ -22,6 +22,7 @@
     position: relative;
     display: inline-block;
     max-width: 500px;
+    word-wrap: break-word;
 }
 
 .chat-messages .message::before
